<resources>
    <string name="app_name">COVID-19 - Social App</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="menu_map">Map</string>
    <string name="menu_news">News</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_language">Select language</string>

    <string name="location">Current Location: %1$s</string>

    <string name="news_image">News image</string>
    <string name="news_title">News title</string>
    <string name="date_title">Date:</string>
    <string name="author_title">Author:</string>
    <string name="launch_activity">Open application</string>
    <string name="menu_filter">Filter</string>
    <string name="allowed_places_type_title">Allowed Places Type</string>
    <string name="filter_layout_title">Select places types to show</string>
    <string name="allowed_places_type_image">Allowed Places Types Icon</string>
    <string name="news_date">01/01/2020</string>


    <string name="request_permission_toast_msg">Location permission is needed for core functionality</string>

    <string-array name="languages_array">
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <string name="menu_about">About</string>

    <string name="about_app">
        This application uses the location of your device location anonymously.\n\n
        All your information will be treated according to the European data protection law.\n\n
        It is possible to deny access to the location from the settings tab of your device.</string>
</resources>
