<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_news"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_news" />

        <item
            android:id="@+id/nav_filter"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_filter" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />

    </group>
</menu>
