<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.unex.tfg.ui.map.view.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/action_nav_home_to_nav_news"
            app:destination="@id/nav_news" />
        <action
            android:id="@+id/action_nav_home_to_nav_settings"
            app:destination="@id/nav_settings" />

        <action
            android:id="@+id/action_nav_home_to_nav_filter"
            app:destination="@id/nav_filter" />
    </fragment>


    <fragment
        android:id="@+id/nav_news"
        android:name="com.unex.tfg.ui.news.view.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" >
        <action
            android:id="@+id/action_nav_news_to_nav_news_item"
            app:destination="@id/nav_news_item" />
    </fragment>

    <fragment
        android:id="@+id/nav_news_item"
        android:name="com.unex.tfg.ui.news.view.NewsItemFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news_info" >
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.unex.tfg.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_filter"
        android:name="com.unex.tfg.ui.filter.view.FilterFragment"
        android:label="@string/menu_filter"
        tools:layout="@layout/fragment_filter" />
</navigation>